--- a/scripts/test-markdown-echelle.Rmd
+++ b/scripts/test-markdown-echelle.Rmd
@@ -2,7 +2,9 @@
 title: "test1"
 author: "Echelle Burns"
 date: "6/8/2022"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
